# nqr-blochsimulator

./: LICENSE  README.md  pyproject.toml
src/nqr_blochsimulator/classes/: pulse.py  sample.py  simulation.py
tests/: simulation.py
