[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "nqr_blochsimulator"
version = "0.0.1a"
authors = [
  { name="Julia Pfitzer", email="git@jupfi.me" },
]

description = "Simple Python script to simulate NQR Bloch equations"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "numpy",
]